@@ -132,6 +132,22 @@ name|lucene
 operator|.
 name|document
 operator|.
+name|Field
+operator|.
+name|Store
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
 name|NumericDocValuesField
 import|;
 end_import
@@ -161,6 +177,20 @@ operator|.
 name|document
 operator|.
 name|SortedSetDocValuesField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|StringField
 import|;
 end_import
 
@@ -4895,6 +4925,154 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testSameFieldNameForPostingAndDocValue
+specifier|public
+name|void
+name|testSameFieldNameForPostingAndDocValue
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// LUCENE-5192: FieldInfos.Builder neglected to update
+comment|// globalFieldNumbers.docValuesType map if the field existed, resulting in
+comment|// potentially adding the same field with different DV types.
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|conf
+init|=
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|conf
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|StringField
+argument_list|(
+literal|"f"
+argument_list|,
+literal|"mock-value"
+argument_list|,
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|NumericDocValuesField
+argument_list|(
+literal|"f"
+argument_list|,
+literal|5
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|doc
+operator|=
+operator|new
+name|Document
+argument_list|()
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|BinaryDocValuesField
+argument_list|(
+literal|"f"
+argument_list|,
+operator|new
+name|BytesRef
+argument_list|(
+literal|"mock"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"should not have succeeded to add a field with different DV type than what already exists"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+name|writer
+operator|.
+name|rollback
+argument_list|()
+expr_stmt|;
+block|}
 name|dir
 operator|.
 name|close
